--- a/web_server/pom.xml
+++ b/web_server/pom.xml
@@ -71,6 +71,18 @@
             <version>9.2.28.v20190418</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
